[tool.poetry]
name = "pfun-path-helper"
version = "0.1.1"
description = "Path helper script"
authors = ["Robbie Capps <robbie@pfun.me>"]
packages = [{include = "pfun_path_helper"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
build = "^1.0.3"
setuptools = "^68.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipython = "^8.16.1"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
